In preparatin for susy layout

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,6 +1,11 @@
-@import "compass/utilities";
+@import "settings";
 
-@import "compass/reset";
+@import "compass";
+@import "normalize";
+@import "susy";
+@import "breakpoint";
+
+@import "components/helpers";
 @import "components/base";
 @import "components/type";
 @import "components/lists";
