--- a/public/sass/components/_nav.scss
+++ b/public/sass/components/_nav.scss
@@ -1,13 +1,20 @@
 .nav {
   background: #0A0C39;
-  margin-bottom: 40px;
   padding: 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   li {
     float: left;
     list-style: none;
-    margin-left: 0;
+    margin: 0;
     a {
+      display: block;
       padding: 0 20px 0 0;
+      &:after {
+        content: '';
+      }
     }
   }
 }
