--- a/public/sass/components/_base.scss
+++ b/public/sass/components/_base.scss
@@ -1,5 +1,7 @@
+@include border-box-sizing;
+
 body {
   background: #333577;
-  margin: 98px 0 0 0;
+  margin: 0;
   font: 16px Helvetica, Arial;
 }
