--- a/public/sass/_settings.scss
+++ b/public/sass/_settings.scss
@@ -1,7 +1,9 @@
 $susy: (
   columns: 12,
-  gutters: 1/4,
+  gutters: 1/6,
   math: fluid,
   output: float,
   gutter-position: inside,
+  global-box-sizing: border-box
 );
+
