--- a/public/sass/components/_nav.scss
+++ b/public/sass/components/_nav.scss
@@ -1,10 +1,9 @@
 .nav {
   background: #0A0C39;
-  padding: 20px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
+  margin-bottom: gutter() * 2;
+  ul {
+    padding: gutter() * 2;
+  }
   li {
     float: left;
     list-style: none;
