--- a/server/views/showcase.ejs
+++ b/server/views/showcase.ejs
@@ -7,7 +7,7 @@
       <section class="section agency-work">
         <h2>Agency work</h2>
         <div class="content-block">
-          <p>I have worked on many large high profile websites, including:</p>
+          <p>I have worked on many large, high profile websites, including:</p>
           <ul>
             <li>FIBA</li>
             <li>Canon</li>
@@ -25,17 +25,39 @@
         </div>
       </section>
 
-      <section class="section list">
+      <section class="section projects list">
+
         <h2>Open source / personal work</h2>
+
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
-              <h3>SassBeautify</h3>
-              <h4>A Sublime Text plugin that beautifies Sass files</h4>
-              <h4><a href="http://github.com/badsyntax/SassBeautify">http://github.com/badsyntax/SassBeautify</a></h4>
+            <div class="overview">
+              <h3>OpenEyes</h3>
+              <p class="description">An Open Source electronic patient record system</p>
+              <p class="repo"><a href="https://github.com/openeyes">https://github.com/openeyes</a></p>
             </div>
-            <div class="date">
-              <!-- <h5>Python</h5> -->
+          </header>
+          <p>Working mainly on the front-end, and helping with back-end
+            tasks when required.</p>
+        </section>
+
+        <section class="content-block">
+          <header class="header">
+            <div class="overview">
+              <h3>OpenEyes POC</h3>
+              <p class="description">A POC for a new architecture for the OpenEyes application</p>
+              <p class="repo"><a href="https://github.com/openeyes/poc-frontend">https://github.com/openeyes/poc-frontend</a></p>
+            </div>
+          </header>
+          <p>A Single Page Application using AngularJS with a Scala HTTP REST API.</p>
+        </section>
+
+        <section class="content-block">
+          <header class="header">
+            <div class="overview">
+              <h3>SassBeautify</h3>
+              <p class="description">A Sublime Text plugin that beautifies Sass files</p>
+              <p class="repo"><a href="http://github.com/badsyntax/SassBeautify">http://github.com/badsyntax/SassBeautify</a></p>
             </div>
           </header>
           <p>My first Python project! This is basic plugin I wrote for the Sublime Text editor, and provides
@@ -44,27 +66,21 @@
 
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
+            <div class="overview">
               <h3>atom-sassbeautify</h3>
-              <h4>Beautify your Sass files</h4>
-              <h4><a href="https://github.com/badsyntax/atom-sassbeautify">https://github.com/badsyntax/atom-sassbeautify</a></h4>
-            </div>
-            <div class="date">
-              <!-- <h5>Javascript</h5> -->
+              <p class="description">Beautify your Sass files</p>
+              <p class="repo"><a href="https://github.com/badsyntax/atom-sassbeautify">https://github.com/badsyntax/atom-sassbeautify</a></p>
             </div>
           </header>
-          <p>Similar to SassBeautify, but written in Javascript for the Atom editor.</p>
+          <p>Similar to SassBeautify, but written in JavaScript for the Atom editor.</p>
         </section>
 
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
+            <div class="overview">
               <h3>badsyntax.co</h3>
-              <h4>My personal website</h4>
-              <h4><a href="https://github.com/badsyntax/badsyntax.co">https://github.com/badsyntax/badsyntax.co</a></h4>
-            </div>
-            <div class="date">
-              <!-- <h5>Javascript (Node.js), CSS</h5> -->
+              <p class="description">My personal website</p>
+              <p class="repo"><a href="https://github.com/badsyntax/badsyntax.co">https://github.com/badsyntax/badsyntax.co</a></p>
             </div>
           </header>
           <p>This was my first real taste of Node.js development. It's a site built on Express.js and uses JSON files for
@@ -73,13 +89,10 @@
 
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
+            <div class="overview">
               <h3>xen</h3>
-              <h4>A node &amp; express site generator.</h4>
-              <h4><a href="https://github.com/badsyntax/xen">https://github.com/badsyntax/xen</a></h4>
-            </div>
-            <div class="date">
-              <!-- <h5>Javascript (Node.js), CSS</h5> -->
+              <p class="description">A node &amp; express site generator.</p>
+              <p class="repo"><a href="https://github.com/badsyntax/xen">https://github.com/badsyntax/xen</a></p>
             </div>
           </header>
           <p>An attempt to create a site generator using some of the concepts from my badsyntax.co site.
@@ -89,13 +102,10 @@
 
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
+            <div class="overview">
               <h3>staticx</h3>
-              <h4>A node.js static site generator</h4>
-              <h4><a href="https://github.com/badsyntax/staticx">https://github.com/badsyntax/staticx</a></h4>
-            </div>
-            <div class="date">
-              <!-- <h5>Javascript (Node.js), CSS</h5> -->
+              <p class="description">A node.js static site generator</p>
+              <p class="repo"><a href="https://github.com/badsyntax/staticx">https://github.com/badsyntax/staticx</a></p>
             </div>
           </header>
           <p>A node.js module that can be used to generate static websites from markdown files. It supports themes
@@ -105,83 +115,10 @@
 
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
-              <h3>Proxima CMS</h3>
-              <h4>A Kohana 3 powered content management system</h4>
-              <h4><a href="https://github.com/proxima-cms">https://github.com/proxima-cms</a></h4>
-            </div>
-            <div class="date">
-              <!-- <h5>Javascript (Node.js), CSS</h5> -->
-            </div>
-          </header>
-          <p>A PHP CMS I built using the Kohana 3 framework, utilising concepts like HMVC, themes and components.</p>
-        </section>
-
-        <section class="content-block">
-          <header class="header">
-            <div class="job-company-title">
-              <h3>jquery-spellchecker</h3>
-              <h4>A lightweight jQuery plugin that can check the spelling of text within a form field or DOM tree</h4>
-              <h4><a href="https://github.com/badsyntax/jquery-spellchecker">https://github.com/badsyntax/jquery-spellchecker</a></h4>
-            </div>
-            <div class="date">
-              <!-- <h5>Javascript (Node.js), CSS</h5> -->
-            </div>
-          </header>
-          <p>I wanted to improve on the spell-checking plugin that was packaged with TinyMCE.</p>
-        </section>
-
-        <section class="content-block">
-          <header class="header">
-            <div class="job-company-title">
-              <h3>mp3-arrange</h3>
-              <h4>Arrange your music collection </h4>
-              <h4><a href="https://github.com/badsyntax/mp3-arrange">https://github.com/badsyntax/mp3-arrange</a></h4>
-            </div>
-            <div class="date">
-              <!-- <h5>Javascript (Node.js), CSS</h5> -->
-            </div>
-          </header>
-          <p>A small and well-tested node.js module that will arrange your MP3 collection.</p>
-        </section>
-
-        <section class="content-block">
-          <header class="header">
-            <div class="job-company-title">
-              <h3>map-route</h3>
-              <h4>An interactive route planner for travelers.</h4>
-              <h4><a href="https://github.com/badsyntax/map-route">https://github.com/badsyntax/map-route</a></h4>
-            </div>
-            <div class="date">
-              <!-- <h5>Javascript (Node.js), CSS</h5> -->
-            </div>
-          </header>
-          <p>A route planner, built using Knockout.js, Kohana, Google Maps, MySQl and OAuth2 (amongst other technologies).</p>
-        </section>
-
-        <section class="content-block">
-          <header class="header">
-            <div class="job-company-title">
-              <h3>itunes-utils</h3>
-              <h4>Manage your itunes library</h4>
-              <h4><a href="https://github.com/badsyntax/itunes-utils">https://github.com/badsyntax/itunes-utils</a></h4>
-            </div>
-            <div class="date">
-              <!-- <h5>Javascript (Node.js), CSS</h5> -->
-            </div>
-          </header>
-          <p>A really old script I wrote to manage my itunes library, using Bash and AppleScript.</p>
-        </section>
-
-        <section class="content-block">
-          <header class="header">
-            <div class="job-company-title">
+            <div class="overview">
               <h3>handlebars-form-helpers</h3>
-              <h4>Form helpers for handlebars</h4>
-              <h4><a href="https://github.com/badsyntax/handlebars-form-helpers">https://github.com/badsyntax/handlebars-form-helpers</a></h4>
-            </div>
-            <div class="date">
-              <!-- <h5>Javascript (Node.js), CSS</h5> -->
+              <p class="description">Form helpers for handlebars</p>
+              <p class="repo"><a href="https://github.com/badsyntax/handlebars-form-helpers">https://github.com/badsyntax/handlebars-form-helpers</a></p>
             </div>
           </header>
           <p>This libary provides many form related helpers that you can use to build forms. It is extremely well tested, I
@@ -190,13 +127,65 @@
 
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
-              <h3>Sprite States</h3>
-              <h4>A custom compass sprite mixin</h4>
-              <h4><a href="https://gist.github.com/badsyntax/6061929">https://gist.github.com/badsyntax/6061929</a></h4>
+            <div class="overview">
+              <h3>Proxima CMS</h3>
+              <p class="description">A Kohana 3 powered content management system</p>
+              <p class="repo"><a href="https://github.com/proxima-cms">https://github.com/proxima-cms</a></p>
             </div>
-            <div class="date">
-              <!-- <h5>Javascript (Node.js), CSS</h5> -->
+          </header>
+          <p>A PHP CMS I built using the Kohana 3 framework, utilising concepts like HMVC, themes and components.</p>
+        </section>
+
+        <section class="content-block">
+          <header class="header">
+            <div class="overview">
+              <h3>jquery-spellchecker</h3>
+              <p class="description">A lightweight jQuery plugin that can check the spelling of text within a form field or DOM tree</p>
+              <p class="repo"><a href="https://github.com/badsyntax/jquery-spellchecker">https://github.com/badsyntax/jquery-spellchecker</a></p>
+            </div>
+          </header>
+          <p>I wanted to improve on the spell-checking plugin that was packaged with TinyMCE.</p>
+        </section>
+
+        <section class="content-block">
+          <header class="header">
+            <div class="overview">
+              <h3>mp3-arrange</h3>
+              <p class="description">Arrange your music collection </p>
+              <p class="repo"><a href="https://github.com/badsyntax/mp3-arrange">https://github.com/badsyntax/mp3-arrange</a></p>
+            </div>
+          </header>
+          <p>A small and well-tested node.js module that will arrange your MP3 collection.</p>
+        </section>
+
+        <section class="content-block">
+          <header class="header">
+            <div class="overview">
+              <h3>map-route</h3>
+              <p class="description">An interactive route planner for travelers.</p>
+              <p class="repo"><a href="https://github.com/badsyntax/map-route">https://github.com/badsyntax/map-route</a></p>
+            </div>
+          </header>
+          <p>A route planner, built using Knockout.js, Kohana, Google Maps, MySQl and OAuth2 (amongst other technologies).</p>
+        </section>
+
+        <section class="content-block">
+          <header class="header">
+            <div class="overview">
+              <h3>itunes-utils</h3>
+              <p class="description">Manage your itunes library</p>
+              <p class="repo"><a href="https://github.com/badsyntax/itunes-utils">https://github.com/badsyntax/itunes-utils</a></p>
+            </div>
+          </header>
+          <p>A really old script I wrote to manage my itunes library, using Bash and AppleScript.</p>
+        </section>
+
+        <section class="content-block">
+          <header class="header">
+            <div class="overview">
+              <h3>Sprite States</h3>
+              <p class="description">A custom compass sprite mixin</p>
+              <p class="repo"><a href="https://gist.github.com/badsyntax/6061929">https://gist.github.com/badsyntax/6061929</a></p>
             </div>
           </header>
           <p>A sprite generator that can generate state pseudo selectors.</p>
@@ -225,6 +214,7 @@
       <section class="section">
         <h2>This site</h2>
         <div class="content-block">
+          <p>Repository: <a href="https://github.com/badsyntax/richardwillis.co">https://github.com/badsyntax/richardwillis.co</a></p>
           <p>Although this site is really simple, I couldn't help but treat it as
           an opportunity to tune my development and deployment processes. So it
           is <em>incredibly</em> over-engineered, but shows how I would setup a large-scale project.</p>
@@ -233,7 +223,7 @@
 
           <p>I use Nginx for serving static files, Node.js for generating HTML templates, Susy and Compass for creating
           the stylesheet.</p>
-          <P>I use Capistrano for deploying and building the site on post deploy and Jenkins for continuous integration. I host the code on github and Jenkins jobs are trigger by a git post-receive web hook.</p>
+          <P>I use Capistrano for deploying and building the site on post deploy and Jenkins for continuous integration. I host the code on github and Jenkins jobs are triggered by a git post-receive web hook.</p>
 
           <h3>Server overview:</h3>
           <ul>
@@ -244,22 +234,12 @@
           <h3>Dev overview and workflow:</h3>
 
           <p>
-            On my desktop machine (Ubuntu 14.04), I use Vagrant to provision a Linux VM. Within the
-            VM I use supervisord to start/stop various services.
-            I attempted to use Docker with Vagrant but the latest Vagrant release (1.6) does not support
-            port forwarding from host into the container without the use of a proxy VM, so I decided to ditch the idea of
-            using a container locally for now. (I believe the port forwarding issue will be fixed with 1.7).
+            On my desktop machine (Ubuntu 14.04), I use Vagrant to provision a Linux VM (Ubuntu 12.04).
           </p>
 
           <p>
             I use bundler to install app gem dependencies locally. I use npm scripts to create handy commands,
             like "npm run build". I execute gem bins like so: "bundle exec compass compile -c config/compass.rb"
-          </p>
-
-          <p>
-            So to set up a complete dev environment and start coding, I simply run `vagrant up`.
-            Things like file watchers (for compiling Sass) are auto-started by supervisor,
-            so I don't need to do anything manually.
           </p>
 
           <p>
@@ -308,7 +288,7 @@
               Backups and monitoring setup:
           </h3>
           <p>
-            I use a separate VPS instance, within the same data-centre, to manage backups and monitoring of
+            I use a separate VPS instance, within the same data-center, to manage backups and monitoring of
             my host machine.
           </p>
           <p>
@@ -325,7 +305,7 @@
           </p>
           <h3>Container usage</h3>
           <p>Each client will have their own container with root access, and they are free to
-          do what they want with their container. I set disk/memory and cpu usage quotas to prevent them
+          do what they want with their container. I set disk/memory and CPU usage quotas to prevent them
           using up all the resources.</p>
           <p>For personal use, I'll create a new container for each website/project. This allows me to
           provision the container exactly how I want it without having conflicting package versions.</p>
