--- a/public/sass/components/_layout.scss
+++ b/public/sass/components/_layout.scss
@@ -24,22 +24,25 @@
   @include leader(1.5, $base-font-size, padding);
   border-top: 1px solid #ccc;
   #{headings(5)} {
-    @include leader(0);
+    @include trailer(1);
+    @include breakpoint($breakpoint-width) {
+      @include trailer(0);
+    }
   }
   h2 {
     @include adjust-font-size-to($h2-font-size, 1.4);
-    @include trailer(0);
-    @include span(3 of 12);
+    @include breakpoint($breakpoint-width) {
+      @include span(3 of 12);
+      @include trailer(0);
+    }
   }
   .content-block {
-    @include span(9 of 12 last);
+    @include breakpoint($breakpoint-width) {
+      @include span(9 of 12 last);
+    }
     h3 {
       @include adjust-font-size-to($h3-font-size, 1.2);
       color: #000;
-    }
-    h4 {
-      @include adjust-font-size-to($h4-font-size, 1.2);
-      font-style: italic;
     }
     p {
       @include adjust-font-size-to($base-font-size * 1.2, 1.2);
@@ -57,9 +60,11 @@
   }
   &.skills, &.frameworks {
     .content-block {
-      @include span(3 of 12);
-      &:last-child {
-        @include span(3 of 12 last);
+      @include breakpoint($breakpoint-width) {
+        @include span(3 of 12);
+        &:last-child {
+          @include span(3 of 12 last);
+        }
       }
     }
   }
@@ -83,16 +88,31 @@
         margin-bottom: 0;
         padding-bottom: 0;
       }
-      .header {
-        margin: 0;
-        padding: 0;
+    }
+    .header {
+      margin: 0;
+      padding: 0;
+    }
+    .overview {
+      @include span(8 of 12);
+    }
+    .title {
+      @include adjust-font-size-to($h4-font-size, 1.2);
+      font-style: italic;
+      margin: 0;
+      text-transform: none;
+    }
+    .date {
+      @include span(4 of 12 last);
+      text-align: right;
+    }
+    &.projects {
+      .overview {
+        @include span(12 of 12);
+        float: none;
       }
-      .job-company-title {
-        @include span(8 of 12);
-      }
-      .date {
-        @include span(4 of 12 last);
-        text-align: right;
+      .description, .repo {
+        @extend .title;
       }
     }
   }
