--- a/public/sass/components/_nav.scss
+++ b/public/sass/components/_nav.scss
@@ -27,5 +27,9 @@
       background: #eee;
       border-color: #000;
     }
+    &:focus {
+      text-decoration: underline;
+      border-color: #990003;
+    }
   }
 }
