--- a/server/views/cv.ejs
+++ b/server/views/cv.ejs
@@ -14,8 +14,8 @@
         <h2>Career Objective</h2>
         <div class="content-block">
           <p>
-            A Javascript developer working on exciting projects using the latest technologies to create useful and accessible
-            web applications, preferably for a start-up or for a small agency in London.
+            A JavaScript developer, either solely front-end or full-stack, working on exciting projects using the latest technologies to create useful and accessible
+            web applications.
           </p>
         </div>
       </section>
@@ -24,13 +24,14 @@
         <section class="content-block">
           <h3>Front-end Development</h3>
           <ul>
-            <li>Javascript (ES5)</li>
+            <li>JavaScript (ES5)</li>
             <li>HTML(5)</li>
             <li>CSS(3)</li>
             <li>Sass</li>
-            <li>Grunt/Gulp</li>
+            <li>Build tools (Grunt etc)</li>
             <li>Accessibility / Web Standards / SEO</li>
             <li>Cross browser knowledge</li>
+            <li>Responsive layouts</li>
             <li>Adobe Suite</li>
             <li>Unit / Integration Testing</li>
           </ul>
@@ -97,24 +98,24 @@
         <h2>Experience</h2>
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
-              <h3>Proxima Web Ltd</h3>
-              <h4>Director</h4>
+            <div class="overview">
+              <h3 class="company">Proxima Web Ltd</h3>
+              <p class="title">Director</p>
             </div>
             <div class="date">
-              <h5>July 2013 – Present</h5>
+              July 2013 &ndash; Present
             </div>
           </header>
-          <p>Managing a small web development company; managing accounts and servers.</p>
+          <p>Managing my own web development company; managing accounts and servers.</p>
         </section>
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
-              <h3>OpenEyes Foundation</h3>
-              <h4>User Interface Developer</h4>
+            <div class="overview">
+              <h3 class="company">OpenEyes Foundation</h3>
+              <p class="title">User Interface Developer</p>
             </div>
             <div class="date">
-              <h5>July 2013 – Present</h5>
+              July 2013 &ndash; October 2014
             </div>
           </header>
           <p>
@@ -129,53 +130,53 @@
         </section>
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
-              <h3>Possible Worldwide</h3>
-              <h4>Principle User Interface developer</h4>
+            <div class="overview">
+              <h3 class="company">Possible Worldwide</h3>
+              <p class="title">Principle User Interface developer</p>
             </div>
             <div class="date">
-              <h5>September 2012 – July 2013</h5>
+              September 2012 &ndash; June 2013
             </div>
           </header>
           <p>
             Leading the front-end development on various high profile websites,
             using some of the latest technologies at the time; working
             with .NET solutions; sharing my knowledge and skills with my
-            colleauges and always available to help and offer advice.
+            colleagues and always available to help and offer advice.
           </p>
         </section>
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
-              <h3>Fortune Cookie</h3>
-              <h4>User Interface developer</h4>
+            <div class="overview">
+              <h3 class="company">Fortune Cookie</h3>
+              <p class="title">User Interface developer</p>
             </div>
             <div class="date">
-              <h5>September 2010 – August 2012</h5>
+              September 2010 &ndash; August 2012
             </div>
           </header>
           <p>Creating cross-browser user interfaces; integration into .NET solutions.</p>
         </section>
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
-              <h3>Hoop Associates</h3>
-              <h4>Deputy development team manager</h4>
+            <div class="overview">
+              <h3 class="company">Hoop Associates</h3>
+              <p class="title">Deputy development team manager</p>
             </div>
             <div class="date">
-              <h5>August 2009 – September 2010</h5>
+              August 2009 &ndash; August 2010
             </div>
           </header>
           <p>Full stack development; managing a small development team.</p>
         </section>
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
-              <h3>Hoop Associates</h3>
-              <h4>Web Developer</h4>
+            <div class="overview">
+              <h3 class="company">Hoop Associates</h3>
+              <p class="title">Web Developer</p>
             </div>
             <div class="date">
-              <h5>February 2008 – August 2009</h5>
+              February 2008 &ndash; August 2009
             </div>
           </header>
           <p>
@@ -186,12 +187,12 @@
         </section>
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
-              <h3>Franz du Plessis Advertising and Design</h3>
-              <h4>Web Developer</h4>
+            <div class="overview">
+              <h3 class="company">Franz du Plessis Advertising and Design</h3>
+              <p class="title">Web Developer</p>
             </div>
             <div class="date">
-              <h5>February 2007 – December 2007</h5>
+              February 2007 &ndash; December 2007
             </div>
           </header>
           <p>
@@ -201,34 +202,33 @@
         </section>
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
-              <h3>NHS Trust Recruitment Campaigns Team </h3>
-              <h4>Human Resources Assistant</h4>
+            <div class="overview">
+              <h3 class="company">NHS Trust Recruitment Campaigns Team </h3>
+              <p class="title">Human Resources Assistant</p>
             </div>
             <div class="date">
-              <h5>February 2005 – December 2005</h5>
+              February 2005 &ndash; December 2005
             </div>
           </header>
           <p>
             Carry out the specifications of the HR Recruitment Procedures.
           </p>
           <p>
-            I came on-board as a temp and quickly realised the scale of my
+            I came on-board as a temp and quickly realized the scale of my
             responsibilities. I treated it as a challenge and was able to understand
-            and improve on the various HR processes. Before I left I created a
+            and improve on the various HR processes. I created a
             "process &amp; guidelines" document which I believe is still in use
-            today. The best part of this role was getting personal thanks from
-            the nurses for helping them through a convoluted system.
+            today.
           </p>
         </section>
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
-              <h3>CSIR (Council for Scientific and Industrial Research)</h3>
-              <h4>Data Capturer / Content Editor</h4>
+            <div class="overview">
+              <h3 class="company">CSIR (Council for Scientific and Industrial Research)</h3>
+              <p class="title">Data Capturer / Content Editor</p>
             </div>
             <div class="date">
-              <h5>January 2002 – January 2003</h5>
+              January 2002 &ndash; January 2003
             </div>
           </header>
           <p>
@@ -249,12 +249,12 @@
         <h2>Education / Qualifications</h2>
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
-              <h3>Computer Training Institute</h3>
-              <h4>IS - Software Development</h4>
+            <div class="overview">
+              <h3 class="company">Computer Training Institute</h3>
+              <p class="title">IS - Software Development</p>
             </div>
             <div class="date">
-              <h5>January 2006 – January 2007</h5>
+              January 2006 &ndash; January 2007
             </div>
           </header>
           <p>
@@ -267,12 +267,12 @@
         </section>
         <section class="content-block">
           <header class="header">
-            <div class="job-company-title">
-              <h3>St David’s Marist Brothers</h3>
-              <h4>High-School - Matriculation (Grade 12)</h4>
+            <div class="overview">
+              <h3 class="company">St David’s Marist Brothers</h3>
+              <p class="title">High-School - Matriculation (Grade 12)</p>
             </div>
             <div class="date">
-              <h5>January 1994 – December 2001</h5>
+              January 1994 &ndash; December 2001
             </div>
           </header>
           <p>
@@ -288,7 +288,7 @@
         <div class="content-block">
           <h3>Work / Portfolio</h3>
           <p>View my <a href="http://richardwillis.co">personal website</a> for examples of work I've done.</p>
-          <h3>Online Profiles:</h3>
+          <h3>On-line Profiles:</h3>
           <ul>
             <li>
               <a href="http://github.com/badsyntax">GitHub profile</a>
@@ -305,7 +305,7 @@
       <section class="section profile">
         <h2>Hobbies / Interests</h2>
         <div class="content-block">
-          <p>I enjoy keeping active and appreciated my time away from the computer.</p>
+          <p>I enjoy keeping active and appreciate my time away from technology.</p>
           <ul>
             <li>Cycling</li>
             <li>Climbing / Bouldering</li>
@@ -322,7 +322,7 @@
           <%- link_to_if(showLinks, 'richardwillis.co', 'http://richardwillis.co') %> -
           07954216809
         </p>
-        <p>Last Updated: <%= lastUpdated %> <span class="no-print">- <a href="/cv/download">Download this CV</a></span></p>
+        <p>Last Updated: <%= lastUpdated %> <span class="no-print">- <a href="/cv/download">Download this CV (PDF)</a></span></p>
       </footer>
     </div>
   </body>
