Fixed pdf viewport size

--- a/server/views/cv.ejs
+++ b/server/views/cv.ejs
@@ -14,7 +14,7 @@
         <h2>Career Objective</h2>
         <div class="content-block">
           <p>
-            A JavaScript developer, either solely front-end or full-stack, working on exciting projects using the latest technologies to create useful and accessible
+            A JavaScript developer, either front-end or full-stack, working on exciting projects using the latest technologies to create useful and accessible
             web applications.
           </p>
         </div>
