More reponsive work

--- a/public/sass/_settings.scss
+++ b/public/sass/_settings.scss
@@ -29,7 +29,8 @@ $susy: (
 );
 
 // Breakpoint settings
-$breakpoint-width: 960px;
+$breakpoint-small-width: 500px;
+$breakpoint-medium-width: 960px;
 
 // --------
 // Compass Vertical Rhythm Settings
