--- a/public/sass/components/_lists.scss
+++ b/public/sass/components/_lists.scss
@@ -1,6 +1,6 @@
 ul {
   &:last-child {
-    @include breakpoint($breakpoint-width) {
+    @include breakpoint($breakpoint-medium-width) {
       margin-bottom: 0;
     }
   }
