--- a/public/sass/components/_nav.scss
+++ b/public/sass/components/_nav.scss
@@ -8,12 +8,19 @@
     padding: 0;
   }
   li {
-    @include span(1 of 2);
+    @include trailer(1, $base-font-size, margin);
+    @include breakpoint($breakpoint-small-width) {
+      @include trailer(0);
+      @include span(1 of 2);
+    }
+    &:last-child {
+      @include trailer(0, $base-font-size, margin);
+      @include breakpoint($breakpoint-small-width) {
+        @include span(1 of 2 last);
+      }
+    }
     list-style: none;
     padding: 0;
-    &:last-child {
-      @include span(1 of 2 last);
-    }
   }
   a {
     @include adjust-font-size-to($base-font-size * 1.5, 1.8);
