--- a/public/sass/components/_layout.scss
+++ b/public/sass/components/_layout.scss
@@ -4,13 +4,15 @@
   background: #f5f5f5;
   border-width: 8px 0 2px 0;
   border: solid #666;
-  margin-bottom: 70px;
-  margin-top: 70px;
+  margin-bottom: 0;
+  margin-top: 0;
   padding: 10px 20px;
   @include breakpoint($breakpoint-small-width) {
     padding: 10px 40px;
   }
   @include breakpoint($breakpoint-medium-width) {
+    margin-top: 70px;
+    margin-bottom: 70px;
     padding: 10px 60px;
   }
   @media print {
