--- a/server/views/cv.ejs
+++ b/server/views/cv.ejs
@@ -106,7 +106,7 @@
               July 2013 &ndash; Present
             </div>
           </header>
-          <p>Managing my own web development company; managing accounts and servers.</p>
+          <p>Managing my own successful web development company; managing accounts and servers.</p>
         </section>
         <section class="content-block">
           <header class="header">
@@ -297,7 +297,7 @@
               <a href="http://stackoverflow.com/users/492325/badsyntax">StackOverflow profile</a>
             </li>
             <li>
-              <a href="http://uk.linkedin.com/in/b4d5ynt4x">LinkedIn profile</a>
+              <a href="http://uk.linkedin.com/in/willisrh">LinkedIn profile</a>
             </li>
           </ul>
         </div>
