--- a/server/views/partials/head.ejs
+++ b/server/views/partials/head.ejs
@@ -11,4 +11,15 @@
     <% stylesheets.forEach(function(stylesheet) { %>
     <link rel="stylesheet" href="<%=stylesheet%>" />
     <% }); %>
+    <script>
+    (function(h,d){
+      if (h!==d)return;
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-1636725-39', 'auto');
+      ga('send', 'pageview');
+      }(document.location.hostname, 'richardwillis.co'));
+    </script>
   </head>
