--- a/server/views/cv.ejs
+++ b/server/views/cv.ejs
@@ -325,5 +325,4 @@
         <p>Last Updated: <%= lastUpdated %> <span class="no-print">- <a href="/cv/download">Download this CV (PDF)</a></span></p>
       </footer>
     </div>
-  </body>
-  </html>
+  <% include partials/head %>
