--- a/server/views/partials/head.ejs
+++ b/server/views/partials/head.ejs
@@ -11,6 +11,7 @@
     <% stylesheets.forEach(function(stylesheet) { %>
     <link rel="stylesheet" href="<%=stylesheet%>" />
     <% }); %>
+    <% if (analtics) { %>
     <script>
     (function(h,d){
       if (h!==d)return;
@@ -22,4 +23,5 @@
       ga('send', 'pageview');
       }(document.location.hostname, 'richardwillis.co'));
     </script>
+    <% } %>
   </head>
